# Cobra

./: .gitignore  Cargo.toml  README.md  main.cpp
rustyBackend/: Cargo.toml
rustyBackend/src/: lib.rs  main.rs
rustyBackend/src/api/: connections.rs  mod.rs  router.rs
rustyBackend/src/cmd/: mod.rs  server.rs
src/: main.rs
windows/: Cargo.toml  README.md  commander.bat
windows/src/: connect.py  lib.rs  main.rs
windows/src/AV_Evasion(Adv)/: mod.rs  techniques.md
windows/src/AV_Evasion(basic)/: detect_sysmon.ps1  initial.ps1
windows/src/AV_Evasion_adv/: mod.rs  peb.asm  peb_write.rs  process_dynamic_policy.rs  techniques.md
windows/src/AntiDebugChecks/: mod.rs  peb_traversal.rs  rdtsc.rs
windows/src/BasicCryptoAlgos/: aes_cipher.rs  aes_exec.rs  chacha_cipher.rs  customB64.rs  md5_cipher.rs  mod.rs  rc4_cipher.rs  xor_cipher.rs
windows/src/Internet/: email_worm.md
windows/src/MayDay/: mbr.asm  mbr_overwrite.rs  mod.rs  self_delete.rs
windows/src/Worming/: mod.rs  worm.rs
windows/src/dllinjection/: injector.rs
windows/src/forkBombs/: powershellBomb.rs
windows/src/helper_fns/: executingVbscripts.rs  mem_alloc.rs  mod.rs
windows/src/keylogger/: keylogger.rs
windows/src/maliciousScripts/: credential_stealing_techniques.md  detect_misconfig.ps1  fn_speak.ps1  forkBomb.vbs  get_browser_data.ps1  get_location.ps1  keepAwake.vbs  lockCursor.vbs  lockKeys.vbs  movement.md  persist2.md  persist3.ps1  persistence.md  steal2_priv.ps1  steal3.ps1  steal4.ps1  steal8_priv.ps1  wifi_hack.rs
windows/src/maliciousScripts/ps1/: caps_vuln.ps1  delete_traces.ps1  enumeration.ps1  image_file_execution.ps1  persist1.ps1  persist4.ps1  steal.ps1  steal5_priv.ps1  steal6_priv.ps1  steal7_priv.ps1  transcripting.ps1  user_windows.ps1  usingCOM.ps1  wifi_script.ps1
windows/src/maliciousScripts/rust/: logIff.rs  mod.rs
