[package]
name = "InfoSecRAT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.32"
winapi = { version = "0.3.9", features = ["winuser","processthreadsapi","psapi","winnls"] }
os_info = "3.7.0"
hostname = "0.3.1"
gethostname = "0.4.3"
