[package]
name = "InfoSecRAT"
version = "0.1.0"
edition = "2018"

[dependencies]
winapi = { version = "0.3.9", features = [
    "errhandlingapi",
    "handleapi",
    "libloaderapi",
    "memoryapi",
    "processthreadsapi",
    "synchapi",
    "winnt",
    "ntdef",
    "winbase",
    "winuser",
    "windef",
    "minwindef",
    "wlanapi",
    "winerror",
    "heapapi",
] }
chrono = "*"
os_info = "3.7.0"
hostname = "0.4.0"
widestring = "1.1.0"
libaes = "*"
windows = {version="*", features=["Win32_System_Threading","Win32_System_SystemServices","Win32_Storage_FileSystem","Win32_Foundation", "Win32_Security", "Win32_System_IO"]}
env_logger = "0.11.3"
quick-xml = "0.31.0"
log = "0.4.21"
tokio = "*"
tokio-util = "*"
rand = "*"


[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Kernel",
]


